--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="right-section">
             <section id="about">
                 <h2>About Me</h2>
-                <p>This is a brief introduction about me, including my skills and background.</p>
+                <p>"Hi! i am Omar Rosa Rodriguez, This is a brief introduction about me, including my skills and background."</p>
             </section>
             <section id="other-stuff">
                 <h2>Other Stuff</h2>
