--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Left Section with Image and Buttons -->
         <div class="left-section">
             <div class="image-placeholder">
-                <p><img src="OmarRosa.jpg" alt="Omar Rosa Rodriguez"></p>
+                <img src="OmarRosa.jpg" alt="Omar Rosa Rodriguez">
             </div>
             <button>Button 1</button>
             <button>Button 2</button>
