--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanded Portfolio Layout</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
         <!-- Left Section with Image and Buttons -->
         <div class="left-section">
             <div class="image-placeholder">
-                <img src="OmarRosa.jpg" alt="Omar Rosa Rodriguez">
+                <p><img src="OmarRosa.png" alt="Omar Rosa Rodriguez"></p>
             </div>
             <button>Button 1</button>
             <button>Button 2</button>
@@ -36,9 +36,23 @@
         <div class="right-section">
             <section id="about">
                 <h2>About Me</h2>
-                <p>&nbsp;Hi! I am Omar Rosa Rodriguez. This is a brief introduction about me, including my skills and background. I was inspired by game development and design from a young age when I first played "Sonic's Ultimate Genesis Collection" on the Xbox 360. Playing one of Sonic's games, made me gain a spark that made me want to make games based on what I saw and convert it with real people and everything that I was in my everyday life. Thus every day I drew concepts of myself in the shoes of Sonic the Hedgehog with the people around me as important characters for my story. Time passed and I graduated and moved to new schools and that made me change the story to fit with where I'm standing on so far. </p>
-                <p>&nbsp;Currently, my strengths are: 1) Concepting levels, characters, and the settings of the project. 2) Working in a team that understands where I'm visualizing and what direction I'm heading on the project.3)  Lay out the plan of how the game’s progress will go.	My weaknesses are:1) Slow progress on the work2) can be distracted by the task</p>
-                <p>&nbsp;Presently, I'm still in high school on my final grade before graduating and still studying the ways to become a decent developer, outside of it I'm working on a project game on Roblox so I could get a hold of what it’s like trying to do a game based off of what I saw through the media base off of sonic the hedgehog 1 and so far I'm just making the hub world for the game and so far I need a team to help me out with the layout of the levels and areas for the game. I still have my story in my head saved to be used later at the right moment to prove myself to who I am and what it takes to become a true professional game developer.</p>
+                <p>&nbsp;Hi! I am Omar Rosa Rodriguez. This is a brief introduction about me, including my skills and background. I was inspired by game development and design from a young age when I first played "Sonic's Ultimate Genesis Collection" on the Xbox 360. Playing one of Sonic's games, made me gain a spark that made me want to make games based on what I saw and convert it with real people and everything that I was in my everyday life. Thus every day I drew concepts of myself in the shoes of Sonic the Hedgehog with the people around me as important characters for my story. Time passed and I graduated and moved to new schools and that made me change the story to fit with where I'm standing on so far. 
+</p><br>
+<p><b>Currently, my strengths are:</b></p>
+
+<ul>
+  <li>Concepting levels, characters, and the settings of the project.</li><br>
+  <li>Working in a team that understands where I'm visualizing and what direction I'm heading on the project.</li><br>
+  <li>Lay out the plan of how the game’s progress will go.</li>
+</ul><br>
+<p><b>My weaknesses are:</b></p>
+
+<ul>
+  <li>Slow progress on the work</li><br>
+  <li>can be distracted by the task</li><br>
+</ul> 
+
+<p>&nbsp;Presently, I'm still in high school on my final grade before graduating and still studying the ways to become a decent developer, outside of it I'm working on a project game on Roblox so I could get a hold of what it’s like trying to do a game based off of what I saw through the media base off of sonic the hedgehog 1 and so far I'm just making the hub world for the game and so far I need a team to help me out with the layout of the levels and areas for the game. I still have my story in my head saved to be used later at the right moment to prove myself to who I am and what it takes to become a true professional game developer.</p>
             </section>
             <section id="other-stuff">
                 <h2>Other Stuff</h2>
