--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Left Section with Image and Buttons -->
         <div class="left-section">
             <div class="image-placeholder">
-                <p><img src="OmarRosa.png" alt="Omar Rosa Rodriguez"></p>
+                <p><img src="OmarRosa.jpg" alt="Omar Rosa Rodriguez"></p>
             </div>
             <button>Projects</button>
             <button>Contacts</button>
