--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
         <!-- Right Section with About Me and Other Stuff -->
         <div class="right-section">
             <section id="about">
-                <h2>About Me</h2>
+                <h2>Projects</h2>
                 <p>&nbsp;Hi! I am Omar Rosa Rodriguez. This is a brief introduction about me, including my skills and background. I was inspired by game development and design from a young age when I first played <a href="https://www.google.com/search?q=sonic%27s+ultimate+genesis+collection+xbox+360&rlz=1C5CHFA_enUS1126US1129&oq=sonic%27s+ultimate+genesis+collection+xbox+360&gs_lcrp=EgZjaHJvbWUqCggAEAAY4wIYgAQyCggAEAAY4wIYgAQyBwgBEC4YgAQyBwgCEAAYgAQyBwgDEAAYgAQyCAgEEAAYFhgeMggIBRAAGBYYHjIICAYQABgWGB4yCAgHEAAYFhgeMggICBAAGBYYHjIICAkQABgWGB7SAQkxNzE1NmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on" target="_blank">Sonic's Ultimate Genesis Collection on the Xbox 360.</a> Playing one of Sonic's games, made me gain a spark that made me want to make games based on what I saw and convert it with real people and everything that I was in my everyday life. Thus every day I drew concepts of myself in the shoes of Sonic the Hedgehog with the people around me as important characters for my story. Time passed and I graduated and moved to new schools and that made me change the story to fit with where I'm standing on so far. 
 </p><br>
 <p><b>Currently, my strengths are:</b></p>
