--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="image-placeholder">
                 <p><img src="OmarRosa.jpg" alt="Omar Rosa Rodriguez"></p>
             </div>
-            <button><a href="projects.html">projects</button>
+            <button>projects</button>
             <button>Contacts</button>
         </div>
 
