--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <li><strong>Side Projects or Hobbies:</strong></li>
             <ul>
                 <li>drawing</li>
-                <li>Writing short stories</li><br>
+                <li>Writing short stories</li>
                 <!-- Add more side projects here -->
             </ul>
         
