--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <ul>
                 <li>[Game company Name]: Sega</li>
                 <li>[Favorite Game Title]: Sonic Mania</li>
-                <li>[Artist]: Yuji Naka Naoto Ohshima
-</li>
+                <li>[Artist]: Yuji Naka Naoto Ohshima</li>
+
                 <!-- Add more inspirations here -->
             </ul>
         
