--- a/projects.html
+++ b/projects.html
@@ -34,29 +34,9 @@
 
         <!-- Right Section with About Me and Other Stuff -->
         <div class="right-section">
-            <section id="about">
+            <section id="Projects">
                 <h2>Projects</h2>
-                <p>&nbsp;Hi! I am Omar Rosa Rodriguez. This is a brief introduction about me, including my skills and background. I was inspired by game development and design from a young age when I first played <a href="https://www.google.com/search?q=sonic%27s+ultimate+genesis+collection+xbox+360&rlz=1C5CHFA_enUS1126US1129&oq=sonic%27s+ultimate+genesis+collection+xbox+360&gs_lcrp=EgZjaHJvbWUqCggAEAAY4wIYgAQyCggAEAAY4wIYgAQyBwgBEC4YgAQyBwgCEAAYgAQyBwgDEAAYgAQyCAgEEAAYFhgeMggIBRAAGBYYHjIICAYQABgWGB4yCAgHEAAYFhgeMggICBAAGBYYHjIICAkQABgWGB7SAQkxNzE1NmowajeoAgCwAgA&sourceid=chrome&ie=UTF-8&safe=active&ssui=on" target="_blank">Sonic's Ultimate Genesis Collection on the Xbox 360.</a> Playing one of Sonic's games, made me gain a spark that made me want to make games based on what I saw and convert it with real people and everything that I was in my everyday life. Thus every day I drew concepts of myself in the shoes of Sonic the Hedgehog with the people around me as important characters for my story. Time passed and I graduated and moved to new schools and that made me change the story to fit with where I'm standing on so far. 
-</p><br>
-<p><b>Currently, my strengths are:</b></p>
-
-<ul>
-  <li>Concepting levels, characters, and the settings of the project.</li><br>
-  <li>Working in a team that understands where I'm visualizing and what direction I'm heading on the project.</li><br>
-  <li>Lay out the plan of how the game’s progress will go.</li>
-</ul><br>
-<p><b>My weaknesses are:</b></p>
-
-<ul>
-  <li>Slow progress on the work</li><br>
-  <li>can be distracted by the task</li><br>
-</ul> 
-
-<p>&nbsp;Presently, I'm still in high school on my final grade before graduating and still studying the ways to become a decent developer, outside of it I'm working on a project game on Roblox so I could get a hold of what it’s like trying to do a game based off of what I saw through the media base off of sonic the hedgehog 1 and so far I'm just making the hub world for the game and so far I need a team to help me out with the layout of the levels and areas for the game. I still have my story in my head saved to be used later at the right moment to prove myself to who I am and what it takes to become a true professional game developer.</p>
-            </section>
-            <section id="other-stuff">
-    <h2>Other Stuff</h2>
-    <p>This section contains other information, such as interests, hobbies, or miscellaneous content.</p>
+                            </section>
     
     <ul>
         <h3>Hobbies and Personal Interests:</h3><br>
