--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
             <div class="image-placeholder">
                 <p><img src="OmarRosa.jpg" alt="Omar Rosa Rodriguez"></p>
             </div>
-            <button><a href="index.html">Home</button>
+            <button><a href="index.html">Home</a></button>
             <button>Contacts</button>
         </div>
 
