--- a/projects.html
+++ b/projects.html
@@ -35,20 +35,10 @@
         <!-- Right Section with About Me and Other Stuff -->
         <div class="right-section">
             <section id="Projects">
-                <h2>Projects</h2>
+                <h2>My Projects (so far)</h2>
                             </section>
             <ul>
-                <li>drawing</li>
-                <li>Writing short stories</li><br>
-                <!-- Add more side projects here -->
-                <li>Action RPGs</li>
-                <li>Indie platformers</li>
-                <li>Open-world exploration games</li><br>
-                <!-- Add more favorite games here -->
-                <li>Learning about advanced game development</li>
-                <li>Building a side scroller game</li>
-                <li>working at Sega</li><br>
-                <!-- Add more goals here -->
+                <li><a href="https://omarthero.github.io/adoption-pets-website-project/">adoption pets website project</a></li>
             </ul>
         
     </ul>
