--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
             <div class="image-placeholder">
                 <p><img src="OmarRosa.jpg" alt="Omar Rosa Rodriguez"></p>
             </div>
-            <button><a href="index.html">Home</a></button>
+            <button>Home</a></button>
             <button>Contacts</button>
         </div>
 
@@ -41,8 +41,6 @@
                 <li><a href="https://omarthero.github.io/adoption-pets-website-project/">adoption pets website project</a></li>
             </ul>
         
-    </ul>
-</section>
         </div>
     </main>
 
