--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
                 <li>working at Sega</li>
                 <!-- Add more goals here -->
             </ul>
-        
+        <section id="Vision Board">
+                <h2>Vision Board</h2>
+            <p>&nbsp;basically this is what will be from now and further on my life and who knows if myself will reach that goal</p>
     
 </section>
         </div>
+        <p><img src="visionboarddesign.jpg" alt="vision board"></p>
     </main>
 
     <footer>
