--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     
 </section>
         </div>
-        <p><img src="visionboarddesign.jpg" alt="vision board"></p>
+        <p><a href="visionboarddesign.jpg"><img src="visionboarddesign.jpg" width="40%" height="40%" alt="vision board"></a></p>
     </main>
 
     <footer>
