--- a/index.html
+++ b/index.html
@@ -112,10 +112,9 @@
         <section id="Vision Board">
                 <h2>Vision Board</h2>
             <p>&nbsp;basically this is what will be from now and further on my life and who knows if myself will reach that goal</p>
-    
+            <p><a href="visionboard.jpg"><img src="visionboarddesign.jpg" alt="vision board"></a></p>
 </section>
         </div>
-        <p><a href="visionboarddesign.jpg"><img src="visionboarddesign.jpg" width="40%" height="40%" alt="vision board"></a></p>
     </main>
 
     <footer>
