--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
                 <li>working at Sega</li>
                 <!-- Add more goals here -->
             </ul>
+        <section id="CWDSA principles">
+        <strong>CWDSA principles:</strong>
+            <ul>
+                <li>Hicks Law:organizing the drop-down items under a tab in a systematic manner to aid users reach their desired destination faster</li>
+                <li>Fitts Law:moving the mouse to get to a target</li>
+                <li>Function -v- Feature:primary functional feature for any </li>
+                <li>Visual Hierarchy:can't tell which is important from one and another</li>
+            </ul>
+</section>
         <section id="Vision Board">
                 <h2>Vision Board</h2>
             <p>&nbsp;basically this is what will be from now and further on my life and who knows if myself will reach that goal</p>
