--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@
                             </section>
             <ul>
                 <li><a href="https://omarthero.github.io/adoption-pets-website-project/">adoption pets website project</a></li>
+                <li><a href="http://localhost:50488/">Marble Race project</a></li>
             </ul>
         
         </div>
