--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@
             <ul>
                 <li><a href="https://omarthero.github.io/adoption-pets-website-project/">adoption pets website project</a></li>
                 <li><a href="http://localhost:50488/">Marble Race project</a></li>
+                <li><a href="https://omarthero.github.io/Certification-Prep_OmarRosa/">Cerfitication Exam Prep</a></li>
             </ul>
         
         </div>
