--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#other-stuff">Other Stuff</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="https://docs.google.com/document/d/1w-gJ-p2Ml1L0ZRRd6mw29uEfJ_ZhhMgGfNJDQuqFELQ/edit?tab=t.0">Resume</a></li>
             </ul>
         </nav>
     </header>
