--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
             <button><a href="projects.html">projects</a></button>
             <button>Contacts</button>
+            <button><a href="https://docs.google.com/document/d/1w-gJ-p2Ml1L0ZRRd6mw29uEfJ_ZhhMgGfNJDQuqFELQ/edit?tab=t.0">Resume</button>
         </div>
 
         <!-- Right Section with About Me and Other Stuff -->
