--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#other-stuff">Other Stuff</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="https://docs.google.com/document/d/1w-gJ-p2Ml1L0ZRRd6mw29uEfJ_ZhhMgGfNJDQuqFELQ/edit?tab=t.0">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -30,6 +31,7 @@
             </div>
             <button><a href="index.html">Home</a></button>
             <button>Contacts</button>
+            <button><a href="https://docs.google.com/document/d/1w-gJ-p2Ml1L0ZRRd6mw29uEfJ_ZhhMgGfNJDQuqFELQ/edit?tab=t.0">Resume</button>
         </div>
 
         <!-- Right Section with About Me and Other Stuff -->
